# ex-tiger

./: .gitignore
chap10/: CMakeLists.txt  codegen.c  flowgraph.c  flowgraph.h  frame.h  graph.h  liveness.c  liveness.h  main.c  merge.tig  merge.tig.s  parsetest.c  printtree.h  semant.c  semant.h  symbol.c  symbol.h  temp.c  translate.c  translate.h  tree.h
chap10/arch/mips/: mipscodegen.c  mipsframe.c
chap2/: CMakeLists.txt  driver.c  errormsg.c  errormsg.h  lex.yy.c  lextest  res.out  test.in  test.tig  tiger.lex
chap3/: CMakeLists.txt  merge.tig  tiger.grm  tiger.lex  y.output  y.tab.c
chap4/: CMakeLists.txt
chap5/: CMakeLists.txt  absyn.c  env.c  env.h  merge.tig  parsetest.c  prabsyn.c  prabsyn.h  semant.c  table.c  tiger.grm  tiger.lex  types.h
chap6/: CMakeLists.txt  env.c  env.h  escape.c  escape.h  frame.h  merge.tig  mipsframe.c  semant.c  semant.h  temp.h  tiger.lex  translate.c  translate.h  types.c  util.h
chap7/: CMakeLists.txt  absyn.h  env.c  env.h  escape.c  escape.h  frame.h  merge.tig  mipsframe.c  parsetest.c  printtree.c  semant.c  symbol.c  symbol.h  table.h  temp.c  temp.h  tiger.grm  translate.c  translate.h  tree.c  tree.h
chap8/: CMakeLists.txt  env.c  errormsg.c  printtree.c  translate.c  tree.h
chap9/: CMakeLists.txt  assem.h  codegen.c  codegen.h  errormsg.h  frame.h  merge.tig  merge.tig.s  mipscodegen.c  mipsframe.c  printtree.c  semant.c  temp.h
chap9/arch/mips/: mipscodegen.c
